# igoodmem_langgraph

libs/partners/goodmem/: LICENSE  Makefile  README.md  pyproject.toml
libs/partners/goodmem/examples/: react_agent_with_memory.py
libs/partners/goodmem/langgraph_goodmem/: __init__.py  _client.py
libs/partners/goodmem/langgraph_goodmem/tools/: __init__.py  create_memory.py  create_space.py  delete_memory.py  delete_space.py  get_memory.py  get_space.py  list_embedders.py  list_memories.py  list_spaces.py  retrieve_memories.py  update_space.py
libs/partners/goodmem/tests/integration_tests/: test_goodmem_integration.py
libs/partners/goodmem/tests/unit_tests/: test_client.py  test_imports.py  test_tools.py
